--- a/.editorconfig
+++ b/.editorconfig
@@ -69,7 +69,7 @@ dotnet_code_quality_unused_parameters = all
 dotnet_remove_unnecessary_suppression_exclusions = none
 
 # New line preferences
-dotnet_style_allow_multiple_blank_lines_experimental = false:suggestion
+dotnet_style_allow_multiple_blank_lines_experimental = false:error
 dotnet_style_allow_statement_immediately_after_block_experimental = false:error
 
 #### C# Coding Conventions ####
@@ -85,7 +85,7 @@ csharp_style_expression_bodied_constructors = false
 csharp_style_expression_bodied_indexers = true:error
 csharp_style_expression_bodied_lambdas = true:error
 csharp_style_expression_bodied_local_functions = true:error
-csharp_style_expression_bodied_methods = true:warning
+csharp_style_expression_bodied_methods = true:suggestion
 csharp_style_expression_bodied_operators = true:error
 csharp_style_expression_bodied_properties = true:error
 
@@ -186,9 +186,9 @@ dotnet_naming_rule.types_should_be_pascal_case.severity = error
 dotnet_naming_rule.types_should_be_pascal_case.symbols = types
 dotnet_naming_rule.types_should_be_pascal_case.style = pascal_case
 
-dotnet_naming_rule.enum_should_be_all_upper_enum.severity = error
-dotnet_naming_rule.enum_should_be_all_upper_enum.symbols = enum
-dotnet_naming_rule.enum_should_be_all_upper_enum.style = all_upper_enum
+dotnet_naming_rule.enum_should_be_begins_with_e.severity = error
+dotnet_naming_rule.enum_should_be_begins_with_e.symbols = enum
+dotnet_naming_rule.enum_should_be_begins_with_e.style = begins_with_e
 
 dotnet_naming_rule.non_field_members_should_be_pascal_case.severity = error
 dotnet_naming_rule.non_field_members_should_be_pascal_case.symbols = non_field_members
@@ -240,12 +240,12 @@ dotnet_naming_style.begins_with_i.required_suffix =
 dotnet_naming_style.begins_with_i.word_separator = 
 dotnet_naming_style.begins_with_i.capitalization = pascal_case
 
-dotnet_naming_style.all_upper_enum.required_prefix = 
-dotnet_naming_style.all_upper_enum.required_suffix = 
-dotnet_naming_style.all_upper_enum.word_separator = _
-dotnet_naming_style.all_upper_enum.capitalization = all_upper
-
 dotnet_naming_style.camel_case.required_prefix = 
 dotnet_naming_style.camel_case.required_suffix = 
 dotnet_naming_style.camel_case.word_separator = 
 dotnet_naming_style.camel_case.capitalization = camel_case
+
+dotnet_naming_style.begins_with_e.required_prefix = E
+dotnet_naming_style.begins_with_e.required_suffix = 
+dotnet_naming_style.begins_with_e.word_separator = 
+dotnet_naming_style.begins_with_e.capitalization = pascal_case
